--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <!-- タブメニュー -->
     <div class="tabs">
         <div class="tab active" onclick="showTab('graphs')">グラフ</div>
-        <div class="tab" onclick="showTab('sheet1')">シート1</div>
-        <div class="tab" onclick="showTab('sheet2')">シート2</div>
+        <div class="tab" onclick="showTab('sheet1')">回収額&回収率</div>
+        <div class="tab" onclick="showTab('sheet2')">掛け金</div>
     </div>
 
     <!-- グラフエリア -->
@@ -93,14 +93,14 @@
         </div>
     </div>
 
-    <!-- シート1 -->
+    <!-- シート1（回収額&回収率） -->
     <div id="sheet1" class="content">
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=1793385342&single=true" width="100%" height="500"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=1266056440&single=true" width="100%" height="500"></iframe>
     </div>
 
-    <!-- シート2 -->
+    <!-- シート2（掛け金） -->
     <div id="sheet2" class="content">
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=1961985889&single=true" width="100%" height="500"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=951086961&single=true" width="100%" height="500"></iframe>
     </div>
 
     <script>
