--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         .content.active {
             display: block;
         }
-        .graph-container {
+        .graph-container, .sheet-container {
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 20px;
         }
-        .graph {
+        .graph, .sheet {
             border: 2px solid #333;
             padding: 10px;
             background-color: #fff;
@@ -54,10 +54,15 @@
             width: 100%;
         }
         iframe {
-            width: 100%; /* 画面の横幅に合わせる */
-            min-width: 600px; /* 最低600pxは確保（スマホでスクロール可能） */
+            width: 100%;
+            min-width: 600px;
             height: 400px;
             border: none;
+        }
+        .sheet iframe {
+            width: 100%;
+            min-width: 900px; /* 横スクロール可能にする */
+            height: 600px; /* 表示領域を広げる */
         }
     </style>
 </head>
@@ -97,12 +102,16 @@
 
     <!-- シート1（回収額&回収率） -->
     <div id="sheet1" class="content">
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=1266056440&single=true" width="100%" height="500"></iframe>
+        <div class="sheet">
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=1266056440&single=true"></iframe>
+        </div>
     </div>
 
     <!-- シート2（掛け金） -->
     <div id="sheet2" class="content">
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=951086961&single=true" width="100%" height="500"></iframe>
+        <div class="sheet">
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=951086961&single=true"></iframe>
+        </div>
     </div>
 
     <script>
