--- a/index.html
+++ b/index.html
@@ -49,20 +49,14 @@
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-            overflow-x: auto;
-            white-space: nowrap;
             width: 100%;
+            max-width: 450px; /* スマホに最適な幅 */
+            height: 300px; /* 高さも固定 */
         }
         iframe {
             width: 100%;
-            min-width: 600px;
-            height: 400px;
+            height: 100%;
             border: none;
-        }
-        .sheet iframe {
-            width: 100%;
-            min-width: 900px; /* 横スクロール可能にする */
-            height: 600px; /* 表示領域を広げる */
         }
     </style>
 </head>
@@ -84,18 +78,6 @@
             </div>
             <div class="graph">
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1135857323&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1143251027&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=33068250&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=771264842&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1642926778&format=interactive"></iframe>
             </div>
         </div>
     </div>
