--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             border-radius: 8px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
             width: 100%;
-            max-width: 450px; /* スマホに最適な幅 */
-            height: 300px; /* 高さも固定 */
+            max-width: 600px;
+            height: 400px;
         }
         iframe {
             width: 100%;
@@ -85,14 +85,14 @@
     <!-- シート1（回収額&回収率） -->
     <div id="sheet1" class="content">
         <div class="sheet">
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=1266056440&single=true"></iframe>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=1266056440&single=true&widget=true&headers=false"></iframe>
         </div>
     </div>
 
     <!-- シート2（掛け金） -->
     <div id="sheet2" class="content">
         <div class="sheet">
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=951086961&single=true"></iframe>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=951086961&single=true&widget=true&headers=false"></iframe>
         </div>
     </div>
 
