--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         }
         .graph-container, .sheet-container {
             display: flex;
-            flex-direction: column;
-            align-items: center;
+            flex-wrap: wrap;
+            justify-content: center;
             gap: 20px;
         }
         .graph, .sheet {
@@ -50,8 +50,8 @@
             border-radius: 8px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
             width: 100%;
-            max-width: 600px;
-            height: 400px;
+            max-width: 450px; /* スマホに最適な幅 */
+            height: 300px; /* 高さ固定 */
         }
         iframe {
             width: 100%;
@@ -70,7 +70,7 @@
         <div class="tab" onclick="showTab('sheet2')">掛け金</div>
     </div>
 
-    <!-- グラフエリア -->
+    <!-- グラフエリア（6つ） -->
     <div id="graphs" class="content active">
         <div class="graph-container">
             <div class="graph">
@@ -78,6 +78,18 @@
             </div>
             <div class="graph">
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1135857323&format=interactive"></iframe>
+            </div>
+            <div class="graph">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1143251027&format=interactive"></iframe>
+            </div>
+            <div class="graph">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=33068250&format=interactive"></iframe>
+            </div>
+            <div class="graph">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=771264842&format=interactive"></iframe>
+            </div>
+            <div class="graph">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1642926778&format=interactive"></iframe>
             </div>
         </div>
     </div>
