--- a/index.html
+++ b/index.html
@@ -37,22 +37,26 @@
         .content.active {
             display: block;
         }
-        .graph-container {
+        .graph-container, .sheet-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             gap: 10px;
         }
-        .graph {
+        .graph, .sheet {
             border: 2px solid #333;
             padding: 10px;
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
             width: 100%;
-            max-width: 450px; /* PCとスマホ両方で最適化 */
-            height: 300px;
-            overflow: hidden; /* スクロール防止 */
+            max-width: 600px;
+            height: 400px;
+        }
+        .sheet iframe {
+            width: 100%;
+            height: 600px; /* シートの高さを適切に設定 */
+            border: none;
         }
         iframe {
             width: 100%;
@@ -95,12 +99,28 @@
         </div>
     </div>
 
+    <!-- シート1（回収額&回収率） -->
+    <div id="sheet1" class="content">
+        <div class="sheet">
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=1266056440&single=true&widget=true&headers=false"></iframe>
+        </div>
+    </div>
+
+    <!-- シート2（掛け金） -->
+    <div id="sheet2" class="content">
+        <div class="sheet">
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=951086961&single=true&widget=true&headers=false"></iframe>
+        </div>
+    </div>
+
     <script>
         function showTab(tabId) {
             document.querySelectorAll('.content').forEach(content => {
                 content.classList.remove('active');
+                content.style.display = "none"; // 非表示
             });
             document.getElementById(tabId).classList.add('active');
+            document.getElementById(tabId).style.display = "block"; // 表示
 
             document.querySelectorAll('.tab').forEach(tab => {
                 tab.classList.remove('active');
