--- a/index.html
+++ b/index.html
@@ -1,132 +1,56 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>わくわくG1サイト</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f8f8f8;
-            padding: 20px;
-        }
-        h1 {
-            color: #333;
-        }
-        .tabs {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-        .tab {
-            padding: 10px 20px;
-            cursor: pointer;
-            background: #ddd;
-            border: 1px solid #ccc;
-            margin: 0 5px;
-            border-radius: 5px;
-        }
-        .tab.active {
-            background: #333;
-            color: white;
-        }
-        .content {
-            display: none;
-        }
-        .content.active {
-            display: block;
-        }
-        .graph-container, .sheet-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-        }
-        .graph, .sheet {
-            border: 2px solid #333;
-            padding: 10px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 600px;
-            height: 400px;
-        }
-        .sheet iframe {
-            width: 100%;
-            height: 600px; /* シートの高さを適切に設定 */
-            border: none;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
-</head>
-<body>
-    <h1>G1レース統計</h1>
+<style>
+    .graph-container, .sheet-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+    }
+    .graph, .sheet {
+        border: 2px solid #333;
+        padding: 10px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 600px;
+        height: 400px;
+        overflow: hidden; /* スクロールを防ぐ */
+        position: relative;
+    }
+    .iframe-wrapper {
+        width: 100%;
+        height: 100%;
+        overflow: hidden; /* iframe 内スクロールを無効化 */
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+</style>
 
-    <!-- タブメニュー -->
-    <div class="tabs">
-        <div class="tab active" onclick="showTab('graphs')">グラフ</div>
-        <div class="tab" onclick="showTab('sheet1')">回収額&回収率</div>
-        <div class="tab" onclick="showTab('sheet2')">掛け金</div>
-    </div>
-
-    <!-- グラフエリア -->
-    <div id="graphs" class="content active">
-        <div class="graph-container">
-            <div class="graph">
+<!-- グラフエリア -->
+<div id="graphs" class="content active">
+    <div class="graph-container">
+        <div class="graph">
+            <div class="iframe-wrapper">
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=262995811&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1135857323&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1143251027&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=33068250&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=771264842&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1642926778&format=interactive"></iframe>
             </div>
         </div>
     </div>
+</div>
 
-    <!-- シート1（回収額&回収率） -->
-    <div id="sheet1" class="content">
-        <div class="sheet">
+<!-- シート -->
+<div id="sheet1" class="content">
+    <div class="sheet">
+        <div class="iframe-wrapper">
             <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=1266056440&single=true&widget=true&headers=false"></iframe>
         </div>
     </div>
-
-    <!-- シート2（掛け金） -->
-    <div id="sheet2" class="content">
-        <div class="sheet">
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=951086961&single=true&widget=true&headers=false"></iframe>
-        </div>
-    </div>
-
-    <script>
-        function showTab(tabId) {
-            document.querySelectorAll('.content').forEach(content => {
-                content.classList.remove('active');
-                content.style.display = "none"; // 非表示
-            });
-            document.getElementById(tabId).classList.add('active');
-            document.getElementById(tabId).style.display = "block"; // 表示
-
-            document.querySelectorAll('.tab').forEach(tab => {
-                tab.classList.remove('active');
-            });
-            document.querySelector(`.tab[onclick="showTab('${tabId}')"]`).classList.add('active');
-        }
-    </script>
-</body>
-</html>
+</div>
