--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             document.querySelectorAll('.tab').forEach(tab => {
                 tab.classList.remove('active');
             });
-            document.querySelector(.tab[onclick="showTab('${tabId}')"]).classList.add('active');
+            document.querySelector(`.tab[onclick="showTab('${tabId}')"]`).classList.add('active');
         }
     </script>
 </body>
