--- a/index.html
+++ b/index.html
@@ -52,10 +52,17 @@
             width: 100%;
             max-width: 600px;
             height: 400px;
+            overflow: hidden;
+            position: relative;
         }
         .sheet iframe {
-            width: 100%;
-            height: 1800px; /* シートの高さを適切に設定 */
+            width: 120%;
+            height: 120%;
+            transform: scale(0.85);
+            transform-origin: top left;
+            position: absolute;
+            top: 0;
+            left: 0;
             border: none;
         }
         iframe {
@@ -65,6 +72,7 @@
         }
     </style>
 </head>
+
 <body>
     <h3>わくわくG1サイト</h3>
 
