--- a/index.html
+++ b/index.html
@@ -37,24 +37,6 @@
         .content.active {
             display: block;
         }
-        .graph-container, .sheet-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-        }
-        .graph {
-            border: 2px solid #333;
-            padding: 10px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 600px;
-            height: 400px;
-            overflow: hidden;
-            position: relative;
-        }
         .sheet {
             border: 2px solid #333;
             padding: 10px;
@@ -63,7 +45,7 @@
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 600px;
-            height: 650px; /* 回収額&回収率と掛け金タブ用の高さ変更 */
+            height: 650px;
             overflow: hidden;
             position: relative;
         }
@@ -77,60 +59,21 @@
             left: 0;
             border: none;
         }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
     </style>
 </head>
-
-
 <body>
     <h3>わくわくG1サイト</h3>
 
-    <!-- タブメニュー -->
     <div class="tabs">
         <div class="tab active" onclick="showTab('graphs')">グラフ</div>
         <div class="tab" onclick="showTab('sheet1')">回収額&回収率</div>
         <div class="tab" onclick="showTab('sheet2')">掛け金</div>
+        <div class="tab" onclick="showTab('sheet3')">収支</div>
     </div>
 
-    <!-- グラフエリア -->
-    <div id="graphs" class="content active">
-        <div class="graph-container">
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=262995811&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1135857323&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1143251027&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=33068250&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=771264842&format=interactive"></iframe>
-            </div>
-            <div class="graph">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1642926778&format=interactive"></iframe>
-            </div>
-        </div>
-    </div>
-
-    <!-- シート1（回収額&回収率） -->
-    <div id="sheet1" class="content">
+    <div id="sheet3" class="content">
         <div class="sheet">
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=1266056440&single=true&widget=true&headers=false"></iframe>
-        </div>
-    </div>
-
-    <!-- シート2（掛け金） -->
-    <div id="sheet2" class="content">
-        <div class="sheet">
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=951086961&single=true&widget=true&headers=false"></iframe>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=2108749640&single=true&widget=true&headers=false"></iframe>
         </div>
     </div>
 
@@ -138,10 +81,10 @@
         function showTab(tabId) {
             document.querySelectorAll('.content').forEach(content => {
                 content.classList.remove('active');
-                content.style.display = "none"; // 非表示
+                content.style.display = "none";
             });
             document.getElementById(tabId).classList.add('active');
-            document.getElementById(tabId).style.display = "block"; // 表示
+            document.getElementById(tabId).style.display = "block";
 
             document.querySelectorAll('.tab').forEach(tab => {
                 tab.classList.remove('active');
