--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
         .content.active {
             display: block;
         }
-        .sheet {
+        .graph-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
+        }
+        .graph, .sheet {
             border: 2px solid #333;
             padding: 10px;
             background-color: #fff;
@@ -45,11 +51,16 @@
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 600px;
-            height: 650px;
             overflow: hidden;
             position: relative;
         }
-        .sheet iframe {
+        .graph {
+            height: 400px;
+        }
+        .sheet {
+            height: 650px;
+        }
+        iframe {
             width: 120%;
             height: 120%;
             transform: scale(0.85);
@@ -69,6 +80,41 @@
         <div class="tab" onclick="showTab('sheet1')">回収額&回収率</div>
         <div class="tab" onclick="showTab('sheet2')">掛け金</div>
         <div class="tab" onclick="showTab('sheet3')">収支</div>
+    </div>
+
+    <div id="graphs" class="content active">
+        <div class="graph-container">
+            <div class="graph">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=262995811&format=interactive"></iframe>
+            </div>
+            <div class="graph">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1135857323&format=interactive"></iframe>
+            </div>
+            <div class="graph">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1143251027&format=interactive"></iframe>
+            </div>
+            <div class="graph">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=33068250&format=interactive"></iframe>
+            </div>
+            <div class="graph">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=771264842&format=interactive"></iframe>
+            </div>
+            <div class="graph">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubchart?oid=1642926778&format=interactive"></iframe>
+            </div>
+        </div>
+    </div>
+
+    <div id="sheet1" class="content">
+        <div class="sheet">
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=1266056440&single=true&widget=true&headers=false"></iframe>
+        </div>
+    </div>
+
+    <div id="sheet2" class="content">
+        <div class="sheet">
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc-celwGB5t3r4mGHdRHi48tGpY3Bg0x0v3BNLFrqukEWAT4QoHi0Q2zsbPDVKIfglG7YcCI_q8QPs/pubhtml?gid=951086961&single=true&widget=true&headers=false"></iframe>
+        </div>
     </div>
 
     <div id="sheet3" class="content">
